fix font-weight too low

--- a/admin/css/base.css
+++ b/admin/css/base.css
@@ -58,7 +58,7 @@ h1,h2,h3,h4,h5 {
 
 h1 {
     margin: 0 0 20px;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 20px;
     color: #666;
 }
@@ -854,7 +854,7 @@ table#change-history tbody th {
 #branding h1 {
     padding: 0;
     margin: 0 20px 0 0;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 24px;
     color: #f5dd5d;
 }
@@ -879,7 +879,7 @@ table#change-history tbody th {
     float: right;
     padding: 0;
     margin: 0 0 0 20px;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 11px;
     letter-spacing: 0.5px;
     text-transform: uppercase;
