--- a/admin/css/fonts.css
+++ b/admin/css/fonts.css
@@ -15,6 +15,6 @@
 @font-face {
     font-family: 'Roboto';
     src: url('../fonts/Roboto-Light-webfont.woff');
-    font-weight: 300;
+    font-weight: 400;
     font-style: normal;
 }
