--- a/assets/css/bootstrap/bootstrap.css
+++ b/assets/css/bootstrap/bootstrap.css
@@ -513,34 +513,34 @@ h6,
 .lead
 {
     font-size: 1.25rem;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 .display-1
 {
     font-size: 6rem;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 1.2;
 }
 
 .display-2
 {
     font-size: 5.5rem;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 1.2;
 }
 
 .display-3
 {
     font-size: 4.5rem;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 1.2;
 }
 
 .display-4
 {
     font-size: 3.5rem;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 1.2;
 }
 
@@ -12046,7 +12046,7 @@ button.bg-dark:focus
 
 .font-weight-light
 {
-    font-weight: 300 !important;
+    font-weight: 400 !important;
 }
 
 .font-weight-lighter
