--- a/assets/scss/core/utilities/_text.scss
+++ b/assets/scss/core/utilities/_text.scss
@@ -1,6 +1,6 @@
 // Weight and italics
 
-.font-weight-300 { font-weight: 300 !important; }
+.font-weight-300 { font-weight: 400 !important; }
 .font-weight-400 { font-weight: 400 !important; }
 .font-weight-500 { font-weight: 500 !important; }
 .font-weight-600 { font-weight: 600 !important; }
